// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game Play: (1) Player 1 places tile [5G] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] | 
P2 | $6000 | [12I] [4B] [12F] [4G] [3E] | 
P3 | $6000 | [11I] [6C] [10G] [8G] [6I] | 
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P1 [End Turn]
`;

exports[`Game Play: (2) Player 1 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $6000 | [12I] [4B] [12F] [4G] [3E] | 
P3 | $6000 | [11I] [6C] [10G] [8G] [6I] | 
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P2 [Choose Tile]
`;

exports[`Game Play: (3) Player 2 places tile [4G] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - 0 0 - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $6000 | [12I] [4B] [12F] [3E] | 
P3 | $6000 | [11I] [6C] [10G] [8G] [6I] | 
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P2 [Choose Hotel: A C F I L T W]
`;

exports[`Game Play: (4) Player 2 starts American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $6000 | [12I] [4B] [12F] [3E] | A:1
P3 | $6000 | [11I] [6C] [10G] [8G] [6I] | 
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P2 [Choose Shares: A] [End Turn]
`;

exports[`Game Play: (5) Player 2 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $5700 | [12I] [4B] [12F] [3E] | A:2
P3 | $6000 | [11I] [6C] [10G] [8G] [6I] | 
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P2 [Choose Shares: A] [End Turn]
`;

exports[`Game Play: (6) Player 2 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $5400 | [12I] [4B] [12F] [3E] | A:3
P3 | $6000 | [11I] [6C] [10G] [8G] [6I] | 
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P2 [Choose Shares: A] [End Turn]
`;

exports[`Game Play: (7) Player 2 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $5100 | [12I] [4B] [12F] [3E] | A:4
P3 | $6000 | [11I] [6C] [10G] [8G] [6I] | 
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P2 [End Turn]
`;

exports[`Game Play: (8) Player 2 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $6000 | [11I] [6C] [10G] [8G] [6I] | 
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P3 [Choose Tile]
`;

exports[`Game Play: (9) Player 3 places tile [6C] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $6000 | [11I] [10G] [8G] [6I] | 
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P3 [Choose Shares: A] [End Turn]
`;

exports[`Game Play: (10) Player 3 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] | A:1
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P3 [Choose Shares: A] [End Turn]
`;

exports[`Game Play: (11) Player 3 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [6F] [1F] [9C] [11F] [10B] | 

P4 [Choose Tile]
`;

exports[`Game Play: (12) Player 4 places tile [6F] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] | 

P4 [Choose Shares: A] [End Turn]
`;

exports[`Game Play: (13) Player 4 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [4F] [11D] [7C] | 
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P1 [Choose Tile]
`;

exports[`Game Play: (14) Player 1 places tile [4F] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [12A] [8A] [11D] [7C] | 
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P1 [Choose Shares: A] [End Turn]
`;

exports[`Game Play: (15) Player 1 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $5600 | [12A] [8A] [11D] [7C] | A:1
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P1 [Choose Shares: A] [End Turn]
`;

exports[`Game Play: (16) Player 1 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $5200 | [12A] [8A] [11D] [7C] | A:2
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P1 [Choose Shares: A] [End Turn]
`;

exports[`Game Play: (17) Player 1 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] | A:3
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P1 [End Turn]
`;

exports[`Game Play: (18) Player 1 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $5100 | [12I] [4B] [12F] [3E] [4D] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P2 [Choose Tile]
`;

exports[`Game Play: (19) Player 2 places tile [4D] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $5100 | [12I] [4B] [12F] [3E] | A:4
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P2 [Choose Shares: A] [End Turn]
`;

exports[`Game Play: (20) Player 2 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] | A:5
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P2 [Choose Shares: A] [End Turn]
`;

exports[`Game Play: (21) Player 2 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $5700 | [11I] [10G] [8G] [6I] [10H] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P3 [Choose Tile]
`;

exports[`Game Play: (22) Player 3 places tile [10H] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $5700 | [11I] [10G] [8G] [6I] | A:1
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P3 [Choose Shares: A] [End Turn]
`;

exports[`Game Play: (23) Player 3 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $5300 | [11I] [10G] [8G] [6I] | A:2
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P3 [Choose Shares: A] [End Turn]
`;

exports[`Game Play: (24) Player 3 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4900 | [11I] [10G] [8G] [6I] | A:3
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P3 [Choose Shares: A] [End Turn]
`;

exports[`Game Play: (25) Player 3 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4500 | [11I] [10G] [8G] [6I] | A:4
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P3 [End Turn]
`;

exports[`Game Play: (26) Player 3 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 - - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [1F] [9C] [11F] [10B] [8B] | 

P4 [Choose Tile]
`;

exports[`Game Play: (27) Player 4 places tile [1F] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] | 

P4 [Choose Shares: A] [End Turn]
`;

exports[`Game Play: (28) Player 4 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [8A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P1 [Choose Tile]
`;

exports[`Game Play: (29) Player 1 places tile [8A] 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4800 | [12A] [11D] [7C] [2I] | A:3
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P1 [Choose Shares: A] [End Turn]
`;

exports[`Game Play: (30) Player 1 purchases American 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4400 | [12A] [11D] [7C] [2I] | A:4
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P1 [Choose Shares: A] [End Turn]
`;

exports[`Game Play: (31) Player 1 purchases American 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $4000 | [12A] [11D] [7C] [2I] | A:5
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P1 [Choose Shares: A] [End Turn]
`;

exports[`Game Play: (32) Player 1 purchases American 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] | A:6
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P1 [End Turn]
`;

exports[`Game Play: (33) Player 1 ends turn 1`] = `
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - 0 - - - - - -
 - - - 0 - - - - - - - -
 - - - - - - - - - - - -
 0 - - A - 0 - - - - - -
 - - - A A - - - - - - -
 - - - - - - - - - 0 - -
 - - - - - - - - - - - -

P1 | $3600 | [12A] [11D] [7C] [2I] [10A] | A:6
P2 | $4700 | [12I] [4B] [12F] [3E] [3C] | A:5
P3 | $4500 | [11I] [10G] [8G] [6I] [2G] | A:4
P4 | $6000 | [9C] [11F] [10B] [8B] [7B] | 

P2 [Choose Tile]
`;
